@@ -100,6 +100,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 3.1.0 - 2021-xx-xx =
 * Add - Customer multi-currency onboarding flow.
+* Add - Checkbox toggle for disabling customer multi currency feature in Advanced Settings.
 
 = 3.0.0 - 2021-xx-xx =
 * Add - Download deposits report in CSV.
